# rfp_management

./: data.py  doc.md  drafted_contract.txt  output.txt
rfp_management_crew/: README.md  app.py  output.txt  pyproject.toml  report.md
rfp_management_crew/ML_model/: XGBoost.ipynb  XGBoost2.ipynb  pricing_history.ipynb  pricing_story_2.ipynb
rfp_management_crew/ML_model/data/: Historical_Contract_Data.csv  Historical_Contract_Data_old.csv  (+1 more)
rfp_management_crew/chroma_db/: chroma.sqlite3
rfp_management_crew/chromadb_utils/: add_embeddings.ipynb  chromadb_utils.ipynb  clean_collections.ipynb  contract.ipynb  counter_offer_generator.ipynb  email.ipynb  legal_review.ipynb  retrieval.ipynb  revise_contract.ipynb  rfp_analysis.ipynb
rfp_management_crew/data/: drafted_contract.md  legal_review.md  negotiation_terms.csv  supplier_proposals.csv  supply_demand.csv
rfp_management_crew/db/: chroma.sqlite3
rfp_management_crew/outputs/: 1.rfp_comparative_analysis.md  2.pricing_risk_analysis.md  3.negotiation_charter.md  4.negotiation_email.md  5.counter_offer_email.md  5a.counteroffer_strategy.md  6.final_contract.md  7.contract_review.md  8.revised_final_contract.md  Counteroffer_Strategy.md  counter_offer_email.md  drafted_contract.md  legal_review.md  negotiation_charter.md  negotiation_email.md  pricing_risk_analysis copy.md  pricing_risk_analysis.md  retrieved_supplier_proposals copy 2.md  retrieved_supplier_proposals copy.md  retrieved_supplier_proposals.md  rfp_comparative_analysis copy 2.md  rfp_comparative_analysis copy.md  rfp_comparative_analysis.md
(+17 files in other folders)
