[project]
name = "rfp_management_crew"
version = "0.1.0"
description = "rfp_management_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[agentops,tools]>=0.102.0,<1.0.0",
    "ipykernel>=6.29.5",
]

[project.scripts]
rfp_management_crew = "rfp_management_crew.main:run"
run_crew = "rfp_management_crew.main:run"
train = "rfp_management_crew.main:train"
replay = "rfp_management_crew.main:replay"
test = "rfp_management_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
